img추가, header 마크업

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>브랜드 | 밀리의 서재</title>
     <!-- Favicon -->
-    <link rel="icon" href="img/favicon.png" style="border-radius: 50%;">
+    <link rel="icon" href="img/favicon.png" style="border-radius: 50%" />
     <!-- jQuery CDN -->
     <script
       src="https://code.jquery.com/jquery-3.6.3.js"
@@ -22,7 +22,34 @@
   </head>
   <body>
     <div class="container">
-
+      <header>
+        <img src="#none" alt="밀리의서재 로고" />
+        <nav>
+          <ul>
+            <li><a href="#none">기업문의</a></li>
+            <li><a href="#none">회사소개</a></li>
+            <li><a href="#none">계정관리</a></li>
+            <li><a href="#none">로그인</a></li>
+          </ul>
+        </nav>
+      </header>
+      <main>
+        <!-- welcome section -->
+        <section class="welcome"></section>
+        <!-- slide section -->
+        <section class="slide"></section>
+        <!-- ad section -->
+        <section class="ad"></section>
+        <!-- books section -->
+        <section class="books"></section>
+        <!-- fav-books section -->
+        <section class="fav-books"></section>
+        <!-- completed section -->
+        <section class="completed"></section>
+        <!-- price section -->
+        <section class="price"></section>
+      </main>
+      <footer></footer>
     </div>
   </body>
 </html>
