--- a/index.html
+++ b/index.html
@@ -23,19 +23,21 @@
   <body>
     <div class="container">
       <header>
-        <img src="#none" alt="밀리의서재 로고" />
+        <img src="img/millie-logo.png" alt="밀리의서재 로고" />
         <nav>
           <ul>
             <li><a href="#none">기업문의</a></li>
             <li><a href="#none">회사소개</a></li>
             <li><a href="#none">계정관리</a></li>
-            <li><a href="#none">로그인</a></li>
+            <li class="login"><a href="#none">로그인</a></li>
           </ul>
         </nav>
       </header>
       <main>
         <!-- welcome section -->
-        <section class="welcome"></section>
+        <section class="welcome">
+            
+        </section>
         <!-- slide section -->
         <section class="slide"></section>
         <!-- ad section -->
