--- a/index.html
+++ b/index.html
@@ -36,7 +36,27 @@
       <main>
         <!-- welcome section -->
         <section class="welcome">
-            
+          <div class="welcome-inner">
+            <img
+              class="welcome-main-bg"
+              src="img/메인배경.png"
+              alt="welcome section의 메인배경"
+            />
+            <div class="main-words">
+              <h1>
+                당신의 일상을 <br />
+                1밀리+
+              </h1>
+              <p>독서와 무제한 친해지리</p>
+              <div>
+                <img
+                  class="welcome-main-millie"
+                  src="img/밀리의서재.png"
+                  alt="밀리의서재 글씨"
+                />
+              </div>
+            </div>
+          </div>
         </section>
         <!-- slide section -->
         <section class="slide"></section>
