welcome 섹션 전면 수정

--- a/index.html
+++ b/index.html
@@ -36,25 +36,22 @@
       <main>
         <!-- welcome section -->
         <section class="welcome">
+          <h1 class="sr-only">밀리의서재 홈페이지 메인 화면</h1>
           <div class="welcome-inner">
-            <img
-              class="welcome-main-bg"
-              src="img/메인배경.png"
-              alt="welcome section의 메인배경"
-            />
             <div class="main-words">
-              <h1>
-                당신의 일상을 <br />
-                1밀리+
-              </h1>
-              <p>독서와 무제한 친해지리</p>
-              <div>
-                <img
-                  class="welcome-main-millie"
-                  src="img/밀리의서재.png"
-                  alt="밀리의서재 글씨"
-                />
-              </div>
+              <img
+                class="welcome-main-ment"
+                src="img/메인멘트.png"
+                alt="당신의 일상을 1밀리+ 독서와 무제한 친해지리"
+              />
+              <img
+                class="welcome-main-millie"
+                src="img/밀리의서재.png"
+                alt="밀리의서재 글씨"
+              />
+            </div>
+            <div>
+              <div class="welcome-main-bg"></div>
             </div>
           </div>
         </section>
