--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   </head>
   <body>
     <div class="container">
+      <!-- Header -->
       <header>
         <img src="img/millie-logo.png" alt="밀리의서재 로고" />
         <nav>
@@ -33,6 +34,7 @@
           </ul>
         </nav>
       </header>
+      <!-- Main -->
       <main>
         <!-- welcome section -->
         <section class="welcome">
@@ -56,7 +58,16 @@
           </div>
         </section>
         <!-- slide section -->
-        <section class="slide"></section>
+        <section class="slide">
+          <h2 class="sr-only">수많은 도서 목록</h2>
+          <div class="share-p">
+            <p>당신을 기다리는 <br />12만권의 도서</p>
+            <p>
+              첫 달 무료 구독을 통해 <br />
+              어떤 도서가 있는지 확인해보세요
+            </p>
+          </div>
+        </section>
         <!-- ad section -->
         <section class="ad"></section>
         <!-- books section -->
@@ -68,6 +79,7 @@
         <!-- price section -->
         <section class="price"></section>
       </main>
+      <!-- Footer -->
       <footer></footer>
     </div>
   </body>
