--- a/index.html
+++ b/index.html
@@ -62,10 +62,17 @@
           <h2 class="sr-only">수많은 도서 목록</h2>
           <div class="share-p">
             <p>당신을 기다리는 <br />12만권의 도서</p>
-            <p>
+            <p class="slide-share-p-second">
               첫 달 무료 구독을 통해 <br />
               어떤 도서가 있는지 확인해보세요
             </p>
+          </div>
+          <div class="book-lists">
+            <ul>
+              <li class="first-books"></li>
+              <li class="second-books"></li>
+              <li class="third-books"></li>
+            </ul>
           </div>
         </section>
         <!-- ad section -->
