ad 섹션레이아웃, books 섹션 badge 달린 책 common css 정리

--- a/index.html
+++ b/index.html
@@ -76,9 +76,52 @@
           </div>
         </section>
         <!-- ad section -->
-        <section class="ad"></section>
+        <section class="ad">
+          <h2 class="sr-only">밀리의서재 광고 영상</h2>
+          <div class="share-p">
+            <p>오디오 드라마로 만나는 <br />베스트셀러</p>
+            <p class="slide-share-p-second">
+              휴남동 서점의 따듯한 이야기를 <br />
+              일상에서 더 가깝게
+            </p>
+          </div>
+          <section class="ad"></section>
+        </section>
         <!-- books section -->
-        <section class="books"></section>
+        <section class="books">
+          <div class="share-p">
+            <p>싹 다 무제한 <br />9,900원</p>
+            <p>10년치 베스트셀러 <br />신간 오디오북 장르 소설까지</p>
+          </div>
+          <p class="">지금 서점 베스트 셀러</p>
+          <div class="free-book">
+            <div
+              class="each-free-book"
+              style="background-image: url(../img/세이노의가르침.jpg)"
+            >
+              <img
+                class="free-icon"
+                src="../img/무료.png"
+                alt="무료 모양 아이콘 이미지"
+              />
+            </div>
+            <div
+              class="each-read-headset-book"
+              style="background-image: url(../img/불편한편의점.jpg)"
+            >
+              <img
+                class="headset-icon"
+                src="../img/헤드셋.png"
+                alt="헤드셋 모양 아이콘 이미지"
+              />
+              <img
+                class="completely-icon"
+                src="../img/완독.png"
+                alt="완독 모양 아이콘 이미지"
+              />
+            </div>
+          </div>
+        </section>
         <!-- fav-books section -->
         <section class="fav-books"></section>
         <!-- completed section -->
