books section 정적 json 데이터 생성&순회, books section 관련 모든 css

--- a/index.html
+++ b/index.html
@@ -93,32 +93,339 @@
             <p>싹 다 무제한 <br />9,900원</p>
             <p>10년치 베스트셀러 <br />신간 오디오북 장르 소설까지</p>
           </div>
-          <p class="">지금 서점 베스트 셀러</p>
-          <div class="free-book">
-            <div
-              class="each-free-book"
-              style="background-image: url(../img/세이노의가르침.jpg)"
-            >
-              <img
-                class="free-icon"
-                src="../img/무료.png"
-                alt="무료 모양 아이콘 이미지"
-              />
+          <div class="list-gap">
+            <div class="nth-list">
+              <p class="books-section-each-title">지금 서점 베스트 셀러</p>
+              <div class="book-list-wrapper">
+                <div>
+                  <div
+                    class="each-book-each"
+                    style="background-image: url()"
+                  ></div>
+                  <div class="a-book-info"></div>
+                </div>
+                <div>
+                  <div
+                    class="each-free-book each-book-each"
+                    style="background-image: url()"
+                  >
+                    <img
+                      class="free-icon"
+                      src="../img/무료.png"
+                      alt="무료 모양 아이콘 이미지"
+                    />
+                  </div>
+                  <div class="a-book-info"></div>
+                </div>
+                <div>
+                  <div
+                    class="each-book-each"
+                    style="background-image: url()"
+                  ></div>
+                  <div class="a-book-info"></div>
+                </div>
+                <div>
+                  <div
+                    class="each-read-headset-book each-book-each"
+                    style="background-image: url()"
+                  >
+                    <img
+                      class="headset-icon"
+                      src="../img/헤드셋.png"
+                      alt="헤드셋 모양 아이콘 이미지"
+                    />
+                    <img
+                      class="completely-icon"
+                      src="../img/완독.png"
+                      alt="완독 모양 아이콘 이미지"
+                    />
+                  </div>
+                  <div class="a-book-info"></div>
+                </div>
+                <div>
+                  <div class="each-book-each" style="background-image: url()">
+                    <img
+                      class="headset-icon"
+                      src="../img/헤드셋.png"
+                      alt="헤드셋 모양 아이콘 이미지"
+                    />
+                    <img
+                      class="completely-icon"
+                      src="../img/완독.png"
+                      alt="완독 모양 아이콘 이미지"
+                    />
+                  </div>
+                  <div class="a-book-info"></div>
+                </div>
+                <div>
+                  <div
+                    class="each-book-each"
+                    style="background-image: url()"
+                  ></div>
+                  <div class="a-book-info"></div>
+                </div>
+                <div>
+                  <div
+                    class="each-read-headset-book each-book-each"
+                    style="background-image: url()"
+                  ></div>
+                  <div class="a-book-info"></div>
+                </div>
+              </div>
             </div>
-            <div
-              class="each-read-headset-book"
-              style="background-image: url(../img/불편한편의점.jpg)"
-            >
-              <img
-                class="headset-icon"
-                src="../img/헤드셋.png"
-                alt="헤드셋 모양 아이콘 이미지"
-              />
-              <img
-                class="completely-icon"
-                src="../img/완독.png"
-                alt="완독 모양 아이콘 이미지"
-              />
+            <div class="nth-list">
+              <p class="books-section-each-title">한 달 이내 출간된 책</p>
+              <div class="book-list-wrapper">
+                <div>
+                  <div
+                    class="each-book-each-month"
+                    style="background-image: url()"
+                  ></div>
+                  <div class="a-book-info-month"></div>
+                </div>
+                <div>
+                  <div
+                    class="each-free-book each-book-each-month"
+                    style="background-image: url()"
+                  >
+                    <img
+                      class="free-icon"
+                      src="../img/무료.png"
+                      alt="무료 모양 아이콘 이미지"
+                    />
+                  </div>
+                  <div class="a-book-info-month"></div>
+                </div>
+                <div>
+                  <div
+                    class="each-book-each-month"
+                    style="background-image: url()"
+                  ></div>
+                  <div class="a-book-info-month"></div>
+                </div>
+                <div>
+                  <div
+                    class="each-read-headset-book each-book-each-month"
+                    style="background-image: url()"
+                  >
+                    <img
+                      class="headset-icon"
+                      src="../img/헤드셋.png"
+                      alt="헤드셋 모양 아이콘 이미지"
+                    />
+                    <img
+                      class="completely-icon"
+                      src="../img/완독.png"
+                      alt="완독 모양 아이콘 이미지"
+                    />
+                  </div>
+                  <div class="a-book-info-month"></div>
+                </div>
+                <div>
+                  <div
+                    class="each-book-each-month"
+                    style="background-image: url()"
+                  >
+                    <img
+                      class="headset-icon"
+                      src="../img/헤드셋.png"
+                      alt="헤드셋 모양 아이콘 이미지"
+                    />
+                    <img
+                      class="completely-icon"
+                      src="../img/완독.png"
+                      alt="완독 모양 아이콘 이미지"
+                    />
+                  </div>
+                  <div class="a-book-info-month"></div>
+                </div>
+                <div>
+                  <div
+                    class="each-book-each-month"
+                    style="background-image: url()"
+                  ></div>
+                  <div class="a-book-info-month"></div>
+                </div>
+                <div>
+                  <div
+                    class="each-read-headset-book each-book-each-month"
+                    style="background-image: url()"
+                  ></div>
+                  <div class="a-book-info-month"></div>
+                </div>
+              </div>
+            </div>
+            <div class="nth-list">
+              <p class="books-section-each-title">오디오북 BEST</p>
+              <div class="book-list-wrapper">
+                <div>
+                  <div
+                    class="each-book-each-audiobest"
+                    style="background-image: url(../img/김미경의마흔수업.jpg)"
+                  ></div>
+                  <div class="a-book-info-audiobook"></div>
+                </div>
+                <div>
+                  <div
+                    class="each-free-book each-book-each-audiobest"
+                    style="background-image: url(../img/세이노의가르침.jpg)"
+                  >
+                    <img
+                      class="free-icon"
+                      src="../img/무료.png"
+                      alt="무료 모양 아이콘 이미지"
+                    />
+                  </div>
+                  <div class="a-book-info-audiobook"></div>
+                </div>
+                <div>
+                  <div
+                    class="each-book-each-audiobest"
+                    style="background-image: url(../img/K배터리레볼루션.jpg)"
+                  ></div>
+                  <div class="a-book-info-audiobook"></div>
+                </div>
+                <div>
+                  <div
+                    class="each-read-headset-book each-book-each-audiobest"
+                    style="
+                      background-image: url(../img/만일내가인생을다시산다면.jpg);
+                    "
+                  >
+                    <img
+                      class="headset-icon"
+                      src="../img/헤드셋.png"
+                      alt="헤드셋 모양 아이콘 이미지"
+                    />
+                    <img
+                      class="completely-icon"
+                      src="../img/완독.png"
+                      alt="완독 모양 아이콘 이미지"
+                    />
+                  </div>
+                  <div class="a-book-info-audiobook"></div>
+                </div>
+                <div>
+                  <div
+                    class="each-book-each-audiobest"
+                    style="background-image: url(../img/불편한편의점.jpg)"
+                  >
+                    <img
+                      class="headset-icon"
+                      src="../img/헤드셋.png"
+                      alt="헤드셋 모양 아이콘 이미지"
+                    />
+                    <img
+                      class="completely-icon"
+                      src="../img/완독.png"
+                      alt="완독 모양 아이콘 이미지"
+                    />
+                  </div>
+                  <div class="a-book-info-audiobook"></div>
+                </div>
+                <div>
+                  <div
+                    class="each-book-each-audiobest"
+                    style="background-image: url(../img/불편한편의점2.jpg)"
+                  ></div>
+                  <div class="a-book-info-audiobook"></div>
+                </div>
+                <div>
+                  <div
+                    class="each-read-headset-book each-book-each-audiobest"
+                    style="
+                      background-image: url(../img/슈퍼리치보다해피리치를꿈꿔라.jpg);
+                    "
+                  ></div>
+                  <div class="a-book-info-audiobook"></div>
+                </div>
+              </div>
+            </div>
+            <div class="nth-list">
+              <p class="books-section-each-title">밀리 독점 오리지널 로맨스</p>
+              <div class="book-list-wrapper">
+                <div>
+                  <div
+                    class="each-book-each-original"
+                    style="background-image: url(../img/김미경의마흔수업.jpg)"
+                  ></div>
+                  <div class="a-book-info-original"></div>
+                </div>
+                <div>
+                  <div
+                    class="each-free-book each-book-each-original"
+                    style="background-image: url(../img/세이노의가르침.jpg)"
+                  >
+                    <img
+                      class="free-icon"
+                      src="../img/무료.png"
+                      alt="무료 모양 아이콘 이미지"
+                    />
+                  </div>
+                  <div class="a-book-info-original"></div>
+                </div>
+                <div>
+                  <div
+                    class="each-book-each-original"
+                    style="background-image: url(../img/K배터리레볼루션.jpg)"
+                  ></div>
+                  <div class="a-book-info-original"></div>
+                </div>
+                <div>
+                  <div
+                    class="each-read-headset-book each-book-each-original"
+                    style="
+                      background-image: url(../img/만일내가인생을다시산다면.jpg);
+                    "
+                  >
+                    <img
+                      class="headset-icon"
+                      src="../img/헤드셋.png"
+                      alt="헤드셋 모양 아이콘 이미지"
+                    />
+                    <img
+                      class="completely-icon"
+                      src="../img/완독.png"
+                      alt="완독 모양 아이콘 이미지"
+                    />
+                  </div>
+                  <div class="a-book-info-original"></div>
+                </div>
+                <div>
+                  <div
+                    class="each-book-each-original"
+                    style="background-image: url(../img/불편한편의점.jpg)"
+                  >
+                    <img
+                      class="headset-icon"
+                      src="../img/헤드셋.png"
+                      alt="헤드셋 모양 아이콘 이미지"
+                    />
+                    <img
+                      class="completely-icon"
+                      src="../img/완독.png"
+                      alt="완독 모양 아이콘 이미지"
+                    />
+                  </div>
+                  <div class="a-book-info-original"></div>
+                </div>
+                <div>
+                  <div
+                    class="each-book-each-original"
+                    style="background-image: url(../img/불편한편의점2.jpg)"
+                  ></div>
+                  <div class="a-book-info-original"></div>
+                </div>
+                <div>
+                  <div
+                    class="each-read-headset-book each-book-each-original"
+                    style="
+                      background-image: url(../img/슈퍼리치보다해피리치를꿈꿔라.jpg);
+                    "
+                  ></div>
+                  <div class="a-book-info-original"></div>
+                </div>
+              </div>
             </div>
           </div>
         </section>
