마크업 필요없는 거 삭제, label클래스로 label이미지 작업, image json 데이터 추가

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                       alt="완독 모양 아이콘 이미지"
                     />
                   </div>
+                  <div class="label label-mp3"></div>
                   <div class="a-book-info"></div>
                 </div>
                 <div>
@@ -155,13 +156,23 @@
                       alt="완독 모양 아이콘 이미지"
                     />
                   </div>
+                  <div class="label label-mp3"></div>
                   <div class="a-book-info"></div>
                 </div>
                 <div>
-                  <div
-                    class="each-book-each"
-                    style="background-image: url()"
-                  ></div>
+                  <div class="each-book-each" style="background-image: url()">
+                    <img
+                      class="headset-icon"
+                      src="../img/헤드셋.png"
+                      alt="헤드셋 모양 아이콘 이미지"
+                    />
+                    <img
+                      class="completely-icon"
+                      src="../img/완독.png"
+                      alt="완독 모양 아이콘 이미지"
+                    />
+                  </div>
+                  <div class="label label-reader"></div>
                   <div class="a-book-info"></div>
                 </div>
                 <div>
@@ -207,36 +218,14 @@
                   <div
                     class="each-read-headset-book each-book-each-month"
                     style="background-image: url()"
-                  >
-                    <img
-                      class="headset-icon"
-                      src="../img/헤드셋.png"
-                      alt="헤드셋 모양 아이콘 이미지"
-                    />
-                    <img
-                      class="completely-icon"
-                      src="../img/완독.png"
-                      alt="완독 모양 아이콘 이미지"
-                    />
-                  </div>
+                  ></div>
                   <div class="a-book-info-month"></div>
                 </div>
                 <div>
                   <div
                     class="each-book-each-month"
                     style="background-image: url()"
-                  >
-                    <img
-                      class="headset-icon"
-                      src="../img/헤드셋.png"
-                      alt="헤드셋 모양 아이콘 이미지"
-                    />
-                    <img
-                      class="completely-icon"
-                      src="../img/완독.png"
-                      alt="완독 모양 아이콘 이미지"
-                    />
-                  </div>
+                  ></div>
                   <div class="a-book-info-month"></div>
                 </div>
                 <div>
@@ -261,36 +250,26 @@
                 <div>
                   <div
                     class="each-book-each-audiobest"
-                    style="background-image: url(../img/김미경의마흔수업.jpg)"
-                  ></div>
+                    style="background-image: url()"
+                  >
+                    <img
+                      class="headset-icon"
+                      src="../img/헤드셋.png"
+                      alt="헤드셋 모양 아이콘 이미지"
+                    />
+                    <img
+                      class="completely-icon"
+                      src="../img/완독.png"
+                      alt="완독 모양 아이콘 이미지"
+                    />
+                  </div>
+                  <div class="label label-reader"></div>
                   <div class="a-book-info-audiobook"></div>
                 </div>
                 <div>
                   <div
                     class="each-free-book each-book-each-audiobest"
-                    style="background-image: url(../img/세이노의가르침.jpg)"
-                  >
-                    <img
-                      class="free-icon"
-                      src="../img/무료.png"
-                      alt="무료 모양 아이콘 이미지"
-                    />
-                  </div>
-                  <div class="a-book-info-audiobook"></div>
-                </div>
-                <div>
-                  <div
-                    class="each-book-each-audiobest"
-                    style="background-image: url(../img/K배터리레볼루션.jpg)"
-                  ></div>
-                  <div class="a-book-info-audiobook"></div>
-                </div>
-                <div>
-                  <div
-                    class="each-read-headset-book each-book-each-audiobest"
-                    style="
-                      background-image: url(../img/만일내가인생을다시산다면.jpg);
-                    "
+                    style="background-image: url()"
                   >
                     <img
                       class="headset-icon"
@@ -303,12 +282,13 @@
                       alt="완독 모양 아이콘 이미지"
                     />
                   </div>
+                  <div class="label label-mp3"></div>
                   <div class="a-book-info-audiobook"></div>
                 </div>
                 <div>
                   <div
                     class="each-book-each-audiobest"
-                    style="background-image: url(../img/불편한편의점.jpg)"
+                    style="background-image: url()"
                   >
                     <img
                       class="headset-icon"
@@ -321,22 +301,83 @@
                       alt="완독 모양 아이콘 이미지"
                     />
                   </div>
-                  <div class="a-book-info-audiobook"></div>
-                </div>
-                <div>
-                  <div
-                    class="each-book-each-audiobest"
-                    style="background-image: url(../img/불편한편의점2.jpg)"
-                  ></div>
+                  <div class="label label-ai"></div>
                   <div class="a-book-info-audiobook"></div>
                 </div>
                 <div>
                   <div
                     class="each-read-headset-book each-book-each-audiobest"
-                    style="
-                      background-image: url(../img/슈퍼리치보다해피리치를꿈꿔라.jpg);
-                    "
-                  ></div>
+                    style="background-image: url()"
+                  >
+                    <img
+                      class="headset-icon"
+                      src="../img/헤드셋.png"
+                      alt="헤드셋 모양 아이콘 이미지"
+                    />
+                    <img
+                      class="completely-icon"
+                      src="../img/완독.png"
+                      alt="완독 모양 아이콘 이미지"
+                    />
+                  </div>
+                  <div class="label label-mp3"></div>
+                  <div class="a-book-info-audiobook"></div>
+                </div>
+                <div>
+                  <div
+                    class="each-book-each-audiobest"
+                    style="background-image: url()"
+                  >
+                    <img
+                      class="headset-icon"
+                      src="../img/헤드셋.png"
+                      alt="헤드셋 모양 아이콘 이미지"
+                    />
+                    <img
+                      class="completely-icon"
+                      src="../img/완독.png"
+                      alt="완독 모양 아이콘 이미지"
+                    />
+                  </div>
+                  <div class="label label-ai"></div>
+                  <div class="a-book-info-audiobook"></div>
+                </div>
+                <div>
+                  <div
+                    class="each-book-each-audiobest"
+                    style="background-image: url()"
+                  >
+                    <img
+                      class="headset-icon"
+                      src="../img/헤드셋.png"
+                      alt="헤드셋 모양 아이콘 이미지"
+                    />
+                    <img
+                      class="summary-icon"
+                      src="../img/요약.png"
+                      alt="요약 모양 아이콘 이미지"
+                    />
+                  </div>
+                  <div class="label label-reader"></div>
+                  <div class="a-book-info-audiobook"></div>
+                </div>
+                <div>
+                  <div
+                    class="each-read-headset-book each-book-each-audiobest"
+                    style="background-image: url()"
+                  >
+                    <img
+                      class="headset-icon"
+                      src="../img/헤드셋.png"
+                      alt="헤드셋 모양 아이콘 이미지"
+                    />
+                    <img
+                      class="completely-icon"
+                      src="../img/완독.png"
+                      alt="완독 모양 아이콘 이미지"
+                    />
+                  </div>
+                  <div class="label label-reader"></div>
                   <div class="a-book-info-audiobook"></div>
                 </div>
               </div>
@@ -347,81 +388,49 @@
                 <div>
                   <div
                     class="each-book-each-original"
-                    style="background-image: url(../img/김미경의마흔수업.jpg)"
+                    style="background-image: url()"
                   ></div>
                   <div class="a-book-info-original"></div>
                 </div>
                 <div>
                   <div
                     class="each-free-book each-book-each-original"
-                    style="background-image: url(../img/세이노의가르침.jpg)"
-                  >
-                    <img
-                      class="free-icon"
-                      src="../img/무료.png"
-                      alt="무료 모양 아이콘 이미지"
-                    />
-                  </div>
+                    style="background-image: url()"
+                  ></div>
                   <div class="a-book-info-original"></div>
                 </div>
                 <div>
                   <div
                     class="each-book-each-original"
-                    style="background-image: url(../img/K배터리레볼루션.jpg)"
+                    style="background-image: url()"
                   ></div>
                   <div class="a-book-info-original"></div>
                 </div>
                 <div>
                   <div
                     class="each-read-headset-book each-book-each-original"
-                    style="
-                      background-image: url(../img/만일내가인생을다시산다면.jpg);
-                    "
-                  >
-                    <img
-                      class="headset-icon"
-                      src="../img/헤드셋.png"
-                      alt="헤드셋 모양 아이콘 이미지"
-                    />
-                    <img
-                      class="completely-icon"
-                      src="../img/완독.png"
-                      alt="완독 모양 아이콘 이미지"
-                    />
-                  </div>
+                    style="background-image: url()"
+                  ></div>
                   <div class="a-book-info-original"></div>
                 </div>
                 <div>
                   <div
                     class="each-book-each-original"
-                    style="background-image: url(../img/불편한편의점.jpg)"
-                  >
-                    <img
-                      class="headset-icon"
-                      src="../img/헤드셋.png"
-                      alt="헤드셋 모양 아이콘 이미지"
-                    />
-                    <img
-                      class="completely-icon"
-                      src="../img/완독.png"
-                      alt="완독 모양 아이콘 이미지"
-                    />
-                  </div>
+                    style="background-image: url()"
+                  ></div>
                   <div class="a-book-info-original"></div>
                 </div>
                 <div>
                   <div
                     class="each-book-each-original"
-                    style="background-image: url(../img/불편한편의점2.jpg)"
+                    style="background-image: url()"
                   ></div>
                   <div class="a-book-info-original"></div>
                 </div>
                 <div>
                   <div
                     class="each-read-headset-book each-book-each-original"
-                    style="
-                      background-image: url(../img/슈퍼리치보다해피리치를꿈꿔라.jpg);
-                    "
+                    style="background-image: url()"
                   ></div>
                   <div class="a-book-info-original"></div>
                 </div>
