sr-only 웹표준 맞게 수정

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       crossorigin="anonymous"
     ></script>
     <!-- Custom CSS and JS -->
-    <link rel="stylesheet" href="css/font.css" />
-    <link rel="stylesheet" href="css/custom.reset.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/responsive.css" />
+    <link rel="stylesheet" href="css/font.css" type="text/css" />
+    <link rel="stylesheet" href="css/custom.reset.css" type="text/css" />
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link rel="stylesheet" href="css/responsive.css" type="text/css" />
     <script defer src="js/main.js"></script>
   </head>
   <body>
@@ -89,6 +89,7 @@
         </section>
         <!-- books section -->
         <section class="books">
+          <h2 class="sr-only">책 정보</h2>
           <div class="share-p">
             <p>싹 다 무제한 <br />9,900원</p>
             <p>10년치 베스트셀러 <br />신간 오디오북 장르 소설까지</p>
@@ -439,7 +440,13 @@
           </div>
         </section>
         <!-- fav-books section -->
-        <section class="fav-books"></section>
+        <section class="fav-books">
+          <h2 class="sr-only">관심 분야별 책</h2>
+          <div class="share-p">
+            <p>관심 분야에 있는 책도 <br />딱 골라드려요</p>
+            <p>검색어 순위를 통해 뽑은 <br />인기 분야 책들을 확인해보세요</p>
+          </div>
+        </section>
         <!-- completed section -->
         <section class="completed"></section>
         <!-- price section -->
